--- a/Clustering_in_Toronto.ipynb
+++ b/Clustering_in_Toronto.ipynb
@@ -6,7 +6,7 @@
       "name": "Clustering in Toronto.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNq9wRoUG5tTx2qAxA/Hwss",
+      "authorship_tag": "ABX9TyMeWCo3b451N0d0OuVLosMg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## `Segmenting and Clustering Neighborhoods in Toronto`\n",
+        "## `Segmenting and Clustering Neighbourhoods in Toronto`\n",
         "\n",
         "---\n",
         "\n"
@@ -43,11 +43,11 @@
       "metadata": {
         "id": "TzE_31f2xx-W",
         "colab_type": "code",
+        "outputId": "e0b28a8c-dfcc-4ec2-db48-c64c4080619e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "6f5633fe-60c0-4d98-ceb0-3ddfe6b3065c"
+        }
       },
       "source": [
         "# Reading Wiki page to Pandas df\n",
@@ -55,48 +55,42 @@
         "import pandas as pd\n",
         "url = 'https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\n",
         "posts = pd.read_html(url)\n",
-        "#print(posts[0].head(10))\n",
+        "# print(posts[0].head(10))\n",
         "df = pd.DataFrame(posts[0])\n",
-        "# print(df.head(10))\n",
         "df = df[~df.Borough.str.contains(\"Not assigned\")]\n",
-        "df = df.groupby('Borough')['Neighborhood'].apply(', '.join)\n",
-        "df = pd.DataFrame(df).reset_index()\n",
-        "# df.head(10)\n",
+        "# df = df.groupby('Postal Code')['Neighborhood'].apply(', '.join)\n",
+        "# df = df.groupby('Postal Code')['Neighborhood'].agg(', '.join)\n",
+        "df = pd.DataFrame(df).reset_index(drop=True)\n",
+        "df.where(df['Neighborhood'] != 'Not assigned', df['Borough'], axis=0, inplace=True)\n",
+        "\n",
+        "# df.head(12)\n",
         "df.shape"
       ],
-      "execution_count": 84,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(10, 2)"
+              "(103, 3)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 84
+          "execution_count": 151
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WE1i--Gjx_35",
         "colab_type": "code",
+        "id": "3VcLtfYAs18n",
         "colab": {}
       },
       "source": [
-        "df = df[~df.Borough.str.contains(\"Not assigned\")]\n",
-        "\n",
-        "# agg = {'Neighborhood': 'sum'}\n",
-        "# df_new = df.groupby(df['Borough']).aggregate(agg)\n",
-        "\n",
-        "\n",
-        "df['Neighborhood'] = df.groupby('Borough')['Neighborhood'].apply(', '.join)\n",
-        "df.head(30)\n",
-        "df.shape"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -105,6 +99,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "O6SGCrgSzcjl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GzGU9CF3qSc0",
         "colab_type": "code",
         "colab": {}
       },
