--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN3k3nR2J/Xterpf9AToBhu",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMg+0ChLZmZCPINCO6a/A13",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +59,11 @@
       },
       "source": [
         "# Capstone Project - The Battle of Neighborhoods (Week 1)\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "### 1. Description of the problem \n",
         "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider:\n",
         "1. Location\n",
@@ -68,7 +74,17 @@
         "\n",
         "As a new hotel quality factor we will be using prediction of Rating value on Foursquare. Machine learning algorithm will be given factors that is known for impacting location quality. Such as proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
         "\n",
+        "---\n",
+        "\n",
         "### 2. Description of the data and how it will be used to solve the problem\n",
+        "\n",
+        "Provider of Location Data will be Foursquare.\n",
+        "\n",
+        "1. Will be used query \"search\" to find all existing hotels in Manhattan. Than filtered only hotels with price cathegory $$$. Saving to Pandas Dataframe.\n",
+        "\n",
+        "2. For every hotel in Dataframe the rating will be found, by passing to Foursquare query with venue id (for every hotel in Dataframe).\n",
+        "\n",
+        "3. Having all the hotels we add by \"explore\" API call\n",
         "\n",
         "\n",
         "\n",
