--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMg+0ChLZmZCPINCO6a/A13",
+      "authorship_tag": "ABX9TyNPIOJfEMgrUbDBkZ1AMTAv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,19 +24,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Dehyzz/IBM_Capstone/blob/master/The_Battle_of_Neighborhoods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "JoC31o5gWGA6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -65,10 +52,7 @@
         "\n",
         "\n",
         "### 1. Description of the problem \n",
-        "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider:\n",
-        "1. Location\n",
-        "2. Location\n",
-        "3. Location\n",
+        "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider: Location, Location and of course Location!\n",
         "\n",
         "This data science project is aiming to solve this issue employing machine learning and Foursquare location information to choose the best location for new hotel in $$$ price category in Manhattan, NY.\n",
         "\n",
@@ -80,16 +64,55 @@
         "\n",
         "Provider of Location Data will be Foursquare.\n",
         "\n",
-        "1. Will be used query \"search\" to find all existing hotels in Manhattan. Than filtered only hotels with price cathegory $$$. Saving to Pandas Dataframe.\n",
+        "1. Will be used Foursquare API call \"search/ + keyword=hotel\" to find all existing hotels in Manhattan. Than filtered only hotels with price cathegory $$$. Saving to Pandas Dataframe.\n",
         "\n",
-        "2. For every hotel in Dataframe the rating will be found, by passing to Foursquare query with venue id (for every hotel in Dataframe).\n",
+        "2. For every hotel in Dataframe the rating will be found, by passing to Foursquare query with by \"venue/ + id\" API call) (for every hotel in Dataframe).\n",
         "\n",
-        "3. Having all the hotels we add by \"explore\" API call\n",
+        "3. Having all the hotels we add (by \"explore/\" API call) nearby POI in selected categories:\n",
+        "\n",
+        "    *   Restaurants\n",
+        "    *   Museums\n",
+        "    *   Parks\n",
+        "    *   Monuments\n",
+        "    *   Shops\n",
+        "    *   List item\n",
+        "\n",
+        "4. Then we filter out ():\n",
+        "    *   Restaurants (rating>4, price_category>$$)\n",
+        "    *   Shops (price_category>$$)\n",
+        "\n",
+        "5. Then we will merge all the data into Dataframe (one hotel = one line) and make a prediction for every Manhattan postcode prediction of rating for hypotetical hotel build in this location.\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         "\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "al-PundQxbzj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ha-fxcCfxcjk",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
