--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNPIOJfEMgrUbDBkZ1AMTAv",
+      "authorship_tag": "ABX9TyM63k+PfJhqsPAcN8yzUPEn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,9 +52,9 @@
         "\n",
         "\n",
         "### 1. Description of the problem \n",
-        "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider: Location, Location and of course Location!\n",
+        "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider: Location, Location and of course Location!\"\n",
         "\n",
-        "This data science project is aiming to solve this issue employing machine learning and Foursquare location information to choose the best location for new hotel in $$$ price category in Manhattan, NY.\n",
+        "This data science project is aiming to solve the challange of finding the best location for new hotel in $$$ price category in Manhattan, NY. To do so we will apply machine learning algorythms on Foursquare location data.\n",
         "\n",
         "As a new hotel quality factor we will be using prediction of Rating value on Foursquare. Machine learning algorithm will be given factors that is known for impacting location quality. Such as proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
         "\n",
@@ -83,7 +83,7 @@
         "\n",
         "5. Then we will merge all the data into Dataframe (one hotel = one line) and make a prediction for every Manhattan postcode prediction of rating for hypotetical hotel build in this location.\n",
         "\n",
-        "\n",
+        "---\n",
         "\n",
         "\n",
         "\n",
@@ -93,9 +93,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ha-fxcCfxcjk",
+        "colab_type": "text"
+      },
+      "source": [
+        "# The Capstone Task:\n",
+        "\n",
+        "## 1. Report\n",
+        "* Introduction where you discuss the business problem and who would be interested in this project.\n",
+        "\n",
+        "* Data where you describe the data that will be used to solve the problem and the source of the data.\n",
+        "\n",
+        "* Methodology section which represents the main component of the report where you discuss and describe any exploratory data analysis that you did, any inferential statistical testing that you performed, if any, and what machine learnings were used and why.\n",
+        "\n",
+        "* Results section where you discuss the results.\n",
+        "* Discussion section where you discuss any observations you noted and any recommendations you can make based on the results.\n",
+        "\n",
+        "* Conclusion section where you conclude the report.\n",
+        "\n",
+        "## 2. A link to your Notebook\n",
+        "\n",
+        "## 3. Presentation or blogpost\n",
+        "\n",
+        "\n",
+        "## Example\n",
+        "\n",
+        "* Report: https://cocl.us/coursera_capstone_report\n",
+        "* Notebook: https://cocl.us/coursera_capstone_notebook\n",
+        "* Presentation: https://cocl.us/coursera_capstone_presentation\n",
+        "* Blogpost: https://cocl.us/coursera_capstone_blogpost"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "al-PundQxbzj",
+        "id": "_wlOGj70zbao",
         "colab_type": "code",
         "colab": {}
       },
@@ -106,14 +140,17 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "Ha-fxcCfxcjk",
-        "colab_type": "text"
+        "id": "r3eRzWLszcOC",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         ""
-      ]
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
