--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM63k+PfJhqsPAcN8yzUPEn",
+      "authorship_tag": "ABX9TyMk0wX5Elfp6eB9IWUI4uU2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,11 +41,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "my8Yf1-S3Eu7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# The Capstone Project - The Battle of Neighborhoods"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GFsGkpElWQXf",
         "colab_type": "text"
       },
       "source": [
-        "# Capstone Project - The Battle of Neighborhoods (Week 1)\n",
+        "## Week 1: Report beginning\n",
         "\n",
         "\n",
         "---\n",
@@ -99,9 +109,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# The Capstone Task:\n",
+        "## Week 2:\n",
         "\n",
-        "## 1. Report\n",
+        "### 1. Report\n",
         "* Introduction where you discuss the business problem and who would be interested in this project.\n",
         "\n",
         "* Data where you describe the data that will be used to solve the problem and the source of the data.\n",
@@ -113,12 +123,12 @@
         "\n",
         "* Conclusion section where you conclude the report.\n",
         "\n",
-        "## 2. A link to your Notebook\n",
+        "### 2. A link to your Notebook\n",
         "\n",
-        "## 3. Presentation or blogpost\n",
+        "### 3. Presentation or blogpost\n",
         "\n",
         "\n",
-        "## Example\n",
+        "### Example\n",
         "\n",
         "* Report: https://cocl.us/coursera_capstone_report\n",
         "* Notebook: https://cocl.us/coursera_capstone_notebook\n",
