--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMk0wX5Elfp6eB9IWUI4uU2",
+      "authorship_tag": "ABX9TyMv+R9dTmLIc35+S0CjcUcz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,16 +57,14 @@
       "source": [
         "## Week 1: Report beginning\n",
         "\n",
-        "\n",
         "---\n",
-        "\n",
         "\n",
         "### 1. Description of the problem \n",
         "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider: Location, Location and of course Location!\"\n",
         "\n",
-        "This data science project is aiming to solve the challange of finding the best location for new hotel in $$$ price category in Manhattan, NY. To do so we will apply machine learning algorythms on Foursquare location data.\n",
+        "This data science project is aiming to solve the challenge of finding the best location for new hotel in $$$ price category in Manhattan, NY. To do so we will apply machine learning algorithms on Foursquare location data.\n",
         "\n",
-        "As a new hotel quality factor we will be using prediction of Rating value on Foursquare. Machine learning algorithm will be given factors that is known for impacting location quality. Such as proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
+        "As a measure for quality of location choice we will be using Venue Rating on Foursquare. Factors known for influencing location quality: proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
         "\n",
         "---\n",
         "\n",
@@ -74,7 +72,7 @@
         "\n",
         "Provider of Location Data will be Foursquare.\n",
         "\n",
-        "1. Will be used Foursquare API call \"search/ + keyword=hotel\" to find all existing hotels in Manhattan. Than filtered only hotels with price cathegory $$$. Saving to Pandas Dataframe.\n",
+        "1. Will be used Foursquare API call \"search/ + keyword=hotel\" to find all existing hotels in Manhattan. Than filtered only hotels with price category $$$. Saving to Pandas Dataframe.\n",
         "\n",
         "2. For every hotel in Dataframe the rating will be found, by passing to Foursquare query with by \"venue/ + id\" API call) (for every hotel in Dataframe).\n",
         "\n",
@@ -91,15 +89,9 @@
         "    *   Restaurants (rating>4, price_category>$$)\n",
         "    *   Shops (price_category>$$)\n",
         "\n",
-        "5. Then we will merge all the data into Dataframe (one hotel = one line) and make a prediction for every Manhattan postcode prediction of rating for hypotetical hotel build in this location.\n",
+        "5. Then we will merge all the data into Dataframe (one hotel = one line) and make a prediction for every Manhattan postcode prediction of rating for hypothetical hotel build in this location.\n",
         "\n",
-        "---\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "---"
       ]
     },
     {
