--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMv+R9dTmLIc35+S0CjcUcz",
+      "authorship_tag": "ABX9TyP3k4l0J25YARvHT8GU6b9a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,14 +57,12 @@
       "source": [
         "## Week 1: Report beginning\n",
         "\n",
-        "---\n",
-        "\n",
         "### 1. Description of the problem \n",
         "It is always a big challenge to choose right location for new property, especially a hotel. As a D. Trump being a luxury property magnate once said \"When considering to build new property there is three major factors that you always have to consider: Location, Location and of course Location!\"\n",
         "\n",
         "This data science project is aiming to solve the challenge of finding the best location for new hotel in $$$ price category in Manhattan, NY. To do so we will apply machine learning algorithms on Foursquare location data.\n",
         "\n",
-        "As a measure for quality of location choice we will be using Venue Rating on Foursquare. Factors known for influencing location quality: proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
+        "As a measure of location choice quality we will be using Venue Rating on Foursquare. Factors known for influencing location quality: proximity to restaurants, museums, parks, monuments, shops and other points of interest (POI).\n",
         "\n",
         "---\n",
         "\n",
@@ -85,9 +83,9 @@
         "    *   Shops\n",
         "    *   List item\n",
         "\n",
-        "4. Then we filter out ():\n",
-        "    *   Restaurants (rating>4, price_category>$$)\n",
-        "    *   Shops (price_category>$$)\n",
+        "4. Then we filter out some veues that have less impact on rating of high price category hotels, keeping the following:\n",
+        "    *   Restaurants (only with rating>4 and price_category>$$)\n",
+        "    *   Shops (only with price_category>$$)\n",
         "\n",
         "5. Then we will merge all the data into Dataframe (one hotel = one line) and make a prediction for every Manhattan postcode prediction of rating for hypothetical hotel build in this location.\n",
         "\n",
