--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3k4l0J25YARvHT8GU6b9a",
+      "authorship_tag": "ABX9TyMP5qBB/avRcGrwpCxoETo8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
         "\n",
         "### 2. Description of the data and how it will be used to solve the problem\n",
         "\n",
-        "Provider of Location Data will be Foursquare.\n",
+        "Provider of Location Data will be Foursquare. Below is high-level process for preparing data.\n",
         "\n",
         "1. Will be used Foursquare API call \"search/ + keyword=hotel\" to find all existing hotels in Manhattan. Than filtered only hotels with price category $$$. Saving to Pandas Dataframe.\n",
         "\n",
