Создано с помощью Colaboratory

--- a/The_Battle_of_Neighborhoods.ipynb
+++ b/The_Battle_of_Neighborhoods.ipynb
@@ -6,7 +6,7 @@
       "name": "The Battle of Neighborhoods.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOg9yzqiMqFGUvFCb7lnsaW",
+      "authorship_tag": "ABX9TyPP2dvYSlqa6BQcfEyST08e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3270,123 +3270,13 @@
       "metadata": {
         "id": "e1lwWfsHvBIf",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 393
-        },
-        "outputId": "21cb6585-31e6-4abc-e3fa-f97724ab9d3c"
+        "colab": {}
       },
       "source": [
         ""
       ],
-      "execution_count": 47,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 4 entries, 0 to 3\n",
-            "Data columns (total 6 columns):\n",
-            " #   Column        Non-Null Count  Dtype  \n",
-            "---  ------        --------------  -----  \n",
-            " 0   id            4 non-null      object \n",
-            " 1   location.lat  4 non-null      float64\n",
-            " 2   location.lng  4 non-null      float64\n",
-            " 3   category      4 non-null      object \n",
-            " 4   category_id   4 non-null      object \n",
-            " 5   rating        4 non-null      float64\n",
-            "dtypes: float64(3), object(3)\n",
-            "memory usage: 320.0+ bytes\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>id</th>\n",
-              "      <th>location.lat</th>\n",
-              "      <th>location.lng</th>\n",
-              "      <th>category</th>\n",
-              "      <th>category_id</th>\n",
-              "      <th>rating</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>4ac518f6f964a52052af20e3</td>\n",
-              "      <td>51.495069</td>\n",
-              "      <td>-0.144827</td>\n",
-              "      <td>Train Station</td>\n",
-              "      <td>4bf58dd8d48988d129951735</td>\n",
-              "      <td>6.5</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>4ae83e74f964a5204bae21e3</td>\n",
-              "      <td>51.517091</td>\n",
-              "      <td>-0.177563</td>\n",
-              "      <td>Train Station</td>\n",
-              "      <td>4bf58dd8d48988d129951735</td>\n",
-              "      <td>7.1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>4af33684f964a520c7eb21e3</td>\n",
-              "      <td>51.531517</td>\n",
-              "      <td>-0.124105</td>\n",
-              "      <td>Train Station</td>\n",
-              "      <td>4bf58dd8d48988d129951735</td>\n",
-              "      <td>8.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>4ac518f7f964a520c6af20e3</td>\n",
-              "      <td>51.531982</td>\n",
-              "      <td>-0.126086</td>\n",
-              "      <td>Train Station</td>\n",
-              "      <td>4bf58dd8d48988d129951735</td>\n",
-              "      <td>8.9</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                         id  location.lat  ...               category_id rating\n",
-              "0  4ac518f6f964a52052af20e3     51.495069  ...  4bf58dd8d48988d129951735    6.5\n",
-              "1  4ae83e74f964a5204bae21e3     51.517091  ...  4bf58dd8d48988d129951735    7.1\n",
-              "2  4af33684f964a520c7eb21e3     51.531517  ...  4bf58dd8d48988d129951735    8.0\n",
-              "3  4ac518f7f964a520c6af20e3     51.531982  ...  4bf58dd8d48988d129951735    8.9\n",
-              "\n",
-              "[4 rows x 6 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 47
-        }
-      ]
+      "execution_count": 53,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3395,34 +3285,13 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "### Methodology:\n",
+        "\n",
+        "1. Listing all London Hotels and it's Foursquare ratings\n",
+        "2. Same for POI (of selected cathegories - known for impacting hotel rating)\n",
+        "3. Cluster (ML) POI around highest Hotel ratings locations (based on POI ratings)\n",
+        "4. Vizualize clusters on the Folio map where highest hotel rating expected\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vXAvriAxzIrg",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# ToDo:\n",
-        "# 1. Add for every hotel add POI analytics by category: category_1_POIavgrating_0.5km, category_1_POIavgrating_2km, category_1_POInumber_0.5km, category_1_POInumber_2km\n",
-        "# (done) 1.1 Choose categories (link https://developer.foursquare.com/docs/build-with-foursquare/categories/)\n",
-        "# 1.2 (todo) Make POI data analysis 'def' (full analysis for every hotel -> every category)\n",
-        "# 1.3 Iterate around POI categories \n",
-        "# 1.4 Iterate around Hotel (coordinates of hotel): save the file for every hotel -> combine in one df for every hotel\n",
-        "\n",
-        "# 2. Predict the hotel rating depending on postcode (coodinates)\n",
-        "# (done) 2.1 Get coordinates of postcodes (clean to first space -> remove duplicates & take average of coordinades)\n",
-        "# 2.2 Use POI data analysis 'def' for coordinates of several random Postcodes\n",
-        "# 2.3 Predict rating of possible hotel in location of any choosen postcode / enter longitude manually \n",
-        "# 2.4 Vizualize  \n",
-        "\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3431,7 +3300,8 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "### ToDo:\n",
+        "1. Prepare data for ML: POI ratings as predictor nearest hotel as result"
       ]
     },
     {
